tests/baselines/reference/parserModifierOnStatementInBlock3.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock3.ts(2,4): error TS1184: Modifiers cannot appear here.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock3.ts (1 errors) ====
    export function foo() {
       export function bar() {
       ~~~~~~
!!! error TS1184: Modifiers cannot appear here.
       }
    }
    